--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
         "start": "node src/server.js",
         "dev": "nodemon src/server.js",
         "db:push": "node scripts/migrate.js",
+        "db:seed": "node scripts/seed.js",
         "setup:db": "node scripts/setup-db.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
