feat: Initialize Express backend application and update Vercel routing for frontend assets.

--- a/vercel.json
+++ b/vercel.json
@@ -5,11 +5,7 @@
             "destination": "/backend/api/index.js"
         },
         {
-            "source": "/assets/(.*)",
-            "destination": "/assets/$1"
-        },
-        {
-            "source": "/(.*)",
+            "source": "/((?!api/.*).*)",
             "destination": "/index.html"
         }
     ]
