feat: Add backend dependencies and remove `postinstall` script from root `package.json`.

--- a/package.json
+++ b/package.json
@@ -2,10 +2,20 @@
     "name": "ebanisteria-root",
     "private": true,
     "scripts": {
-        "postinstall": "cd backend && npm install",
         "build": "cd frontend && npm install && npm run build -- --outDir ../dist"
     },
     "engines": {
         "node": "18.x"
+    },
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "helmet": "^7.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "morgan": "^1.10.0",
+        "pdfkit": "^0.17.2",
+        "pg": "^8.11.3"
     }
 }
